src/objects/PaymentGateway__c.object
<CustomObject>
    <fields>
        <fullName>EntityID__c</fullName>
        <label>Entity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <label>IsActive</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTest__c</fullName>
        <label>IsTest</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentGatewayFullName__c</fullName>
        <label>PaymentGateway Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DAZN Payment Gateway</label>
    <nameField>
        <label>PaymentGateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Payment Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>